--- a/front-end/angular.json
+++ b/front-end/angular.json
@@ -100,6 +100,18 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "build-webpack": {
+          "builder": "@angular-devkit/build-webpack:webpack",
+          "options": {
+            "webpackConfig": "webpack.config.js"
+          }
+        },
+        "serve-webpack": {
+          "builder": "@angular-devkit/build-webpack:webpack-dev-server",
+          "options": {
+            "webpackConfig": "webpack.config.js"
+          }
         }
       }
     },
